overflow the hero image to stop side scrolling on smart mirror

--- a/portfolio/portfolio/static/css/pages/project.scss
+++ b/portfolio/portfolio/static/css/pages/project.scss
@@ -23,7 +23,7 @@ $video-icon-size: 80px;
 
   &-top {
     width: 100%;
-    padding: 30px 0 20px;
+    padding: 30px 0 50px;
     margin-bottom: 70px;
 
     &--light-text {
@@ -74,13 +74,14 @@ $video-icon-size: 80px;
 
   &-hero {
 		@include clearfix;
+		position: relative;
+		overflow: hidden;
     min-height: 45vh;
-    margin-bottom: 50px;
 
     @media (max-width: 700px) {
       min-height: 0;
       padding: 0 3%;
-      margin-bottom: 15px;;
+      margin-bottom: 15px;
 		}
 
     &,
